# mycs-framework

./: .gitignore  LICENSE  README.md
DevLibs/: install.sh
Example/: CMakeLists.txt  Logger.cpp  Logger.h  TradingProgram.cpp  TradingProgram.h  UsualHeader.h  main.cpp
Example/MarketData/: MarketData.h  MarketDataProvider.cpp  MarketDataProvider.h
Example/StrategyEngine/: StrategyEngine.cpp  StrategyEngine.h
Example/UnitTest/: TestCTPApiHelper.cpp  TestMarketDataProvider.cpp
Example/Utils/: CTPApiHelper.h  Utils.h
